tests/NormalTests/paczka1/small_fuzzy/30574497.err
Error in line 2: jfpWkJ S665 2,2
Error in line 1: 42EiDmPD S843 54,8
Error in line 3: jfpWkJ A460 35,3
